# tracely360-lite

./: .gitignore  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  SUPPORT.md  opencode.json  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md  copilot-instructions.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: workflow.yml
.opencode/plugins/: tracely360_lite.js
tests/: test_analyze.py  test_benchmark.py  test_build.py  test_cache.py  test_claude_md.py  test_cluster.py  test_confidence.py  test_detect.py  test_endpoints.py  test_export.py  test_extract.py  test_hooks.py  test_hypergraph.py  test_ingest.py  test_install.py  test_languages.py  test_multilang.py  test_naming.py  test_pipeline.py  test_rationale.py  test_report.py  test_security.py  test_semantic_similarity.py  test_serve.py  test_transcribe.py  test_validate.py  test_watch.py  test_wiki.py
tests/fixtures/: sample_aspnet.cs  sample_aspnet_acceptverbs.cs  sample_aspnet_group.cs  sample_aspnet_minimal_handlers.cs  sample_chi.go  sample_django.py  sample_django_include.py  sample_django_include_tuple.py  sample_django_nested.py  sample_echo.go  sample_express.js  sample_fastapi_router.py  sample_flask.py  sample_flask_registered_blueprint.py  sample_gin.go  sample_go_stdlib.go  sample_laravel.php  sample_laravel_api_resource.php  sample_laravel_handler_edges.php  sample_laravel_nested_resource.php  sample_laravel_shallow_resource.php  sample_nest.ts  sample_openapi.yaml  sample_rails.rb  sample_rails_handler_edges.rb  sample_rails_nested_resource.rb  sample_rails_resource.rb  sample_rails_shallow_resource.rb  sample_spring.java  sample_swagger.json
tests/fixtures/app/api/health/: route.ts
tests/fixtures/app/api/items/: route.ts
tests/fixtures/aspnet_cross_file/: handlers.cs  routes.cs
tests/fixtures/laravel_cross_file/: controllers.php  routes.php
tests/fixtures/pages/api/: mixed.ts
tests/fixtures/rails_cross_file/: controllers.rb  routes.rb
tracely360/: __init__.py  __main__.py  analyze.py  benchmark.py  build.py  cache.py  cluster.py  detect.py  endpoints.py  export.py  extract.py  hooks.py  ingest.py  manifest.py  markdown_sections.py  naming.py  report.py  security.py  serve.py  skill-aider.md  skill-claw.md  skill-codex.md  skill-copilot.md  skill-droid.md  skill-kiro.md  skill-opencode.md  skill-trae.md  skill-vscode.md  skill-windows.md  skill.md  transcribe.py  tree_sitter_utils.py  validate.py  watch.py  wiki.py
tracely360_lite/: __init__.py  __main__.py  analyze.py  benchmark.py  build.py  cache.py  cluster.py  detect.py  endpoints.py  export.py  extract.py  hooks.py  ingest.py  manifest.py  report.py  security.py  serve.py  skill-aider.md  skill-claw.md  skill-codex.md  skill-copilot.md  skill-droid.md  skill-kiro.md  skill-opencode.md  skill-trae.md  skill-vscode.md  skill-windows.md  skill.md  transcribe.py  validate.py  watch.py  wiki.py
