[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "tracely360"
version = "0.4.27"
description = "Turn any folder of code, docs, papers, images, or videos into a queryable knowledge graph — no LLM required for AST extraction"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
keywords = [
    "knowledge-graph",
    "graphrag",
    "tree-sitter",
    "community-detection",
    "leiden",
    "code-analysis",
    "ast",
    "claude-code",
    "codex",
    "cursor",
    "gemini",
    "aider",
    "kiro",
]
classifiers = [
    "Development Status :: production",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Code Generators",
    "Topic :: Software Development :: Quality Assurance",
    "Typing :: Typed",
]
dependencies = [
    "networkx",
    "PyYAML",
    # tree-sitter core
    "tree-sitter>=0.23.0",
    # language grammars — one per supported AST language
    "tree-sitter-c",
    "tree-sitter-c-sharp",
    "tree-sitter-cpp",
    "tree-sitter-elixir",
    "tree-sitter-go",
    "tree-sitter-java",
    "tree-sitter-javascript",
    "tree-sitter-julia",
    "tree-sitter-kotlin",
    "tree-sitter-lua",
    "tree-sitter-objc",
    "tree-sitter-php",
    "tree-sitter-powershell",
    "tree-sitter-python",
    "tree-sitter-ruby",
    "tree-sitter-rust",
    "tree-sitter-scala",
    "tree-sitter-swift",
    "tree-sitter-typescript",
    "tree-sitter-verilog",
    "tree-sitter-zig",
]

[project.scripts]
tracely360 = "tracely360.__main__:main"

[project.urls]
Homepage = "https://github.com/sidrat2612/tracely360-lite"
Repository = "https://github.com/sidrat2612/tracely360-lite"
Issues = "https://github.com/sidrat2612/tracely360-lite/issues"

[project.optional-dependencies]
leiden = ["graspologic; python_version < '3.13'"]
mcp = ["mcp"]
neo4j = ["neo4j"]
office = ["python-docx", "openpyxl"]
pdf = ["pypdf", "html2text"]
svg = ["matplotlib"]
video = ["faster-whisper", "yt-dlp"]
watch = ["watchdog"]
all = [
    "graspologic; python_version < '3.13'",
    "mcp",
    "neo4j",
    "python-docx",
    "openpyxl",
    "pypdf",
    "html2text",
    "matplotlib",
    "faster-whisper",
    "yt-dlp",
    "watchdog",
]

# ── Tooling ──────────────────────────────────────────────────────────────────

[tool.setuptools.packages.find]
where = ["."]
include = ["tracely360*"]

[tool.setuptools.package-data]
tracely360 = [
    "skill.md",
    "skill-aider.md",
    "skill-claw.md",
    "skill-codex.md",
    "skill-copilot.md",
    "skill-droid.md",
    "skill-kiro.md",
    "skill-opencode.md",
    "skill-trae.md",
    "skill-vscode.md",
    "skill-windows.md",
]

[tool.pytest.ini_options]
markers = [
    "integration: end-to-end pipeline coverage",
]
